Finished mobile view, fixed tablet view nav and alignment which ruined mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -206,22 +206,34 @@ footer {
 }
 
 @media screen and (max-width: 800px) {
- 
+
     header {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
+        align-content: flex-start;
     }
 
     header .logo {
         width: 150px;
+        margin-left: 32%;
     }
 
     header nav {
         justify-content: center;
+        margin-left: 0px;
+        width: 500px;
+        margin-left: 15%;
+    }
+
+    header nav a {
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 500px;
     }
 
     .cta img {
         display: none;
+        margin-left: 10%;
     }
 
     .cta .cta-text {
@@ -230,53 +242,105 @@ footer {
         margin-top: 120px;
         text-align: center;
         padding: 0px 0px;
-        margin-left: 33%;
+        margin-left: 22%;
       }
+
+    .main-content {
+        width: 500px;
+        margin-left: 12%;
+    }
 
     .main-content .middle-img {
         margin-top: 45px;
-        width: 90%;
+        width: 70%;
         margin-left: 5%;
       }
 
     .main-content .top-content .text-content {
         width: 350px; 
-        margin-right: 34px;
-        margin-left: 50px;
+        margin-right: 0px;
+        margin-left: 0px;
       }  
 
     .main-content .bottom-content .text-content {
         width: 225px;
-        margin-left: 50px;
-        margin-right: 0px;
+        margin-left: 0%;
+        margin-right: 0%;
       }
+
+    .contact {
+        width: 500px;
+        margin-left: 12%;
+    }
+
+    footer {
+        margin-right: 22%;
+    }
 }
 
 @media screen and (max-width: 500px) {
 
-   .main-content {
+    header {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    header nav a {
+        border-bottom: 1px solid gray;
+        margin-right: 0px;
+        width: 500px;
+        text-align: center;
+        padding-bottom: 10px;
+        padding-top: 10px;
+    }
+
+    header nav{
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        flex-wrap: wrap; 
+        align-items: center;
+        margin-left: 0%;
+    } 
+
+    header .logo {
+        margin-left: 42%;
+    }
+
+    .top-content {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .main-content {
+        margin-left: 33%;
+        margin-right: 30%;
     }
 
     .main-content .top-content .text-content {
-        width: 75%; 
         margin-right: 0%;
         margin-left: 0%;
-
+        padding-bottom: 10%;
       }  
 
     .main-content .middle-img {
-        margin-top: 45px;
-        width: 65%;
-        margin-left: 18%;
+        margin-top: 0px;
+        width: 100%;
+        margin-left: 0%;
       }
       
+    .bottom-content {
+        display: flex;
+        flex-direction: column;
+       
+    }
+    
     .main-content .bottom-content .text-content {
-        width: 225px;
-        margin-left: 0px;
-        margin-right: 0px;
+        margin-left: 0%;
+        margin-right: 0%;
+        padding-bottom: 10%;
       }
+
+    .contact {
+        margin-left: 33%;
+        margin-right: 33%;
+    }
 }
